--- a/assets/css/solutions.css
+++ b/assets/css/solutions.css
@@ -163,3 +163,78 @@
         right: 10%;
     }
 }
+
+/* Esercizio 13 */
+
+.ex-13-button:hover .ex-13-top-white{
+    animation: top-360 linear 2s;
+}
+
+@keyframes top-360{
+    0% {
+        left: 10%;
+        top: -10px;
+    }
+    25%{
+        left: calc(100% - 30px);
+        top: -10px;
+    }
+    40%{
+        left: calc(100% - 30px);
+        top: calc(100% - 10px);
+    }
+
+    70%{
+        left: 0;
+        top: calc(100% - 10px);
+    }
+
+    85%{
+        left: -15px;
+        top: -10px;
+    }
+
+    100%{
+        left: 10%;
+        top: -10px;
+    }
+
+    
+}
+
+
+.ex-13-button:hover .ex-13-bottom-white{
+    animation: bottom-360 linear 2s;
+}
+
+@keyframes bottom-360{
+    0% {
+        right: 20%;
+        bottom: -10px;
+    }
+    25%{
+        right: calc(100% - 35px);
+        bottom: -10px;
+    }
+    40%{
+        right: calc(100% - 35px);
+        bottom: calc(100% - 10px);
+    }
+
+    70%{
+        right: 0;
+        bottom: calc(100% - 10px);
+    }
+
+    85%{
+        right: -30px;
+        bottom: -10px;
+    }
+
+    100%{
+        right: 20%;
+        bottom: -10px;
+    }
+
+    
+}
